--- a/InvenTree/locale/ja/LC_MESSAGES/django.po
+++ b/InvenTree/locale/ja/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-07-09 06:58+0000\n"
-"PO-Revision-Date: 2021-07-09 05:51\n"
+"PO-Revision-Date: 2021-07-09 10:16\n"
 "Last-Translator: \n"
 "Language-Team: Japanese\n"
 "Language: ja_JP\n"
@@ -19,7 +19,7 @@ msgstr ""
 
 #: InvenTree/api.py:64
 msgid "API endpoint not found"
-msgstr ""
+msgstr "APIエンドポイントが見つかりません"
 
 #: InvenTree/api.py:110
 msgid "No action specified"
@@ -38,39 +38,39 @@ msgstr ""
 #: order/forms.py:30 order/forms.py:41 order/forms.py:52 order/forms.py:63
 #: order/forms.py:74 part/forms.py:118 templates/js/forms.js:486
 msgid "Confirm"
-msgstr ""
+msgstr "確認"
 
 #: InvenTree/forms.py:128
 msgid "Confirm delete"
-msgstr ""
+msgstr "削除の確認"
 
 #: InvenTree/forms.py:129
 msgid "Confirm item deletion"
-msgstr ""
+msgstr "削除の確認"
 
 #: InvenTree/forms.py:161 templates/registration/login.html:76
 msgid "Enter password"
-msgstr ""
+msgstr "パスワードを入力してください"
 
 #: InvenTree/forms.py:162
 msgid "Enter new password"
-msgstr ""
+msgstr "新しいパスワードを入力してください。"
 
 #: InvenTree/forms.py:169
 msgid "Confirm password"
-msgstr ""
+msgstr "パスワードの確認"
 
 #: InvenTree/forms.py:170
 msgid "Confirm new password"
-msgstr ""
+msgstr "新しいパスワードの確認"
 
 #: InvenTree/forms.py:205
 msgid "Apply Theme"
-msgstr ""
+msgstr "テーマを適用"
 
 #: InvenTree/forms.py:235
 msgid "Select Category"
-msgstr ""
+msgstr "カテゴリの選択"
 
 #: InvenTree/helpers.py:396
 #, python-brace-format
@@ -116,25 +116,25 @@ msgstr ""
 
 #: InvenTree/models.py:64 templates/js/attachment.js:52
 msgid "Comment"
-msgstr ""
+msgstr "コメント："
 
 #: InvenTree/models.py:64
 msgid "File comment"
-msgstr ""
+msgstr "ファイルコメント"
 
 #: InvenTree/models.py:70 InvenTree/models.py:71 part/models.py:2042
 #: report/templates/report/inventree_test_report_base.html:91
 #: templates/js/stock.js:1202
 msgid "User"
-msgstr ""
+msgstr "ユーザー"
 
 #: InvenTree/models.py:74
 msgid "upload date"
-msgstr ""
+msgstr "アップロード日時"
 
 #: InvenTree/models.py:102
 msgid "Invalid choice"
-msgstr ""
+msgstr "無効な選択です"
 
 #: InvenTree/models.py:118 InvenTree/models.py:119 company/models.py:414
 #: label/models.py:112 part/models.py:680 part/models.py:2191
@@ -143,7 +143,7 @@ msgstr ""
 #: templates/js/part.js:118 templates/js/part.js:251 templates/js/part.js:743
 #: templates/js/stock.js:995
 msgid "Name"
-msgstr ""
+msgstr "お名前"
 
 #: InvenTree/models.py:125 build/models.py:179
 #: build/templates/build/detail.html:21 company/models.py:353
@@ -167,47 +167,47 @@ msgstr ""
 #: templates/js/stock.js:557 templates/js/stock.js:1007
 #: templates/js/stock.js:1052
 msgid "Description"
-msgstr ""
+msgstr "説明"
 
 #: InvenTree/models.py:126
 msgid "Description (optional)"
-msgstr ""
+msgstr "説明 (オプション)"
 
 #: InvenTree/models.py:134
 msgid "parent"
-msgstr ""
+msgstr "親"
 
 #: InvenTree/serializers.py:52
 msgid "Must be a valid number"
-msgstr ""
+msgstr "有効な数字でなければなりません"
 
 #: InvenTree/settings.py:505
 msgid "English"
-msgstr ""
+msgstr "英語"
 
 #: InvenTree/settings.py:506
 msgid "French"
-msgstr ""
+msgstr "フランス語"
 
 #: InvenTree/settings.py:507
 msgid "German"
-msgstr ""
+msgstr "ドイツ語"
 
 #: InvenTree/settings.py:508
 msgid "Polish"
-msgstr ""
+msgstr "ポーランド語"
 
 #: InvenTree/settings.py:509
 msgid "Turkish"
-msgstr ""
+msgstr "トルコ語"
 
 #: InvenTree/status.py:94
 msgid "Background worker check failed"
-msgstr ""
+msgstr "バックグラウンドワーカーのチェックに失敗しました"
 
 #: InvenTree/status.py:98
 msgid "Email backend not configured"
-msgstr ""
+msgstr "メールアドレスが未設定です"
 
 #: InvenTree/status.py:101
 msgid "InvenTree system health checks failed"
@@ -244,15 +244,15 @@ msgstr ""
 #: InvenTree/status_codes.py:146
 #: order/templates/order/sales_order_base.html:126
 msgid "Shipped"
-msgstr ""
+msgstr "発送済み"
 
 #: InvenTree/status_codes.py:186
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: InvenTree/status_codes.py:187
 msgid "Attention needed"
-msgstr ""
+msgstr "注意が必要です"
 
 #: InvenTree/status_codes.py:188
 msgid "Damaged"
@@ -548,7 +548,7 @@ msgstr ""
 
 #: build/forms.py:211
 msgid "Location of completed parts"
-msgstr ""
+msgstr "完了したパーツの場所"
 
 #: build/forms.py:215 build/templates/build/build_base.html:138
 #: build/templates/build/detail.html:59 order/models.py:549
@@ -660,7 +660,7 @@ msgstr ""
 #: templates/js/part.js:505 templates/js/stock.js:526
 #: templates/js/stock.js:1394
 msgid "Part"
-msgstr ""
+msgstr "パーツ"
 
 #: build/models.py:205
 msgid "Select part to build"
@@ -847,7 +847,7 @@ msgstr ""
 
 #: build/models.py:1365
 msgid "Build to allocate parts"
-msgstr ""
+msgstr "パーツを割り当てるためにビルドする"
 
 #: build/models.py:1381 stock/templates/stock/item_base.html:8
 #: stock/templates/stock/item_base.html:31
@@ -877,7 +877,7 @@ msgstr ""
 
 #: build/templates/build/allocate.html:7
 msgid "Allocate Parts"
-msgstr ""
+msgstr "パーツを割り当て"
 
 #: build/templates/build/allocate.html:15
 msgid "Allocate Stock to Build"
@@ -901,14 +901,14 @@ msgstr ""
 
 #: build/templates/build/allocate.html:29
 msgid "Order required parts"
-msgstr ""
+msgstr "注文必須パーツ"
 
 #: build/templates/build/allocate.html:30
 #: company/templates/company/detail_manufacturer_part.html:33
 #: company/templates/company/detail_supplier_part.html:32 order/views.py:724
 #: part/templates/part/category.html:136
 msgid "Order Parts"
-msgstr ""
+msgstr "パーツの注文"
 
 #: build/templates/build/allocate.html:36
 msgid "Untracked stock has been fully allocated for this Build Order"
@@ -1618,37 +1618,37 @@ msgstr ""
 #: report/models.py:187 stock/forms.py:226 templates/js/table_filters.js:25
 #: templates/js/table_filters.js:324
 msgid "Template"
-msgstr ""
+msgstr "テンプレート"
 
 #: common/models.py:161
 msgid "Parts are templates by default"
-msgstr ""
+msgstr "パーツはデフォルトのテンプレートです"
 
 #: common/models.py:167 part/models.py:827 part/templates/part/detail.html:170
 #: templates/js/table_filters.js:132 templates/js/table_filters.js:336
 msgid "Assembly"
-msgstr ""
+msgstr "アセンブリ"
 
 #: common/models.py:168
 msgid "Parts can be assembled from other components by default"
-msgstr ""
+msgstr "パーツはデフォルトで他のコンポーネントから組み立てることができます"
 
 #: common/models.py:174 part/models.py:833 part/templates/part/detail.html:180
 #: templates/js/table_filters.js:340
 msgid "Component"
-msgstr ""
+msgstr "コンポーネント"
 
 #: common/models.py:175
 msgid "Parts can be used as sub-components by default"
-msgstr ""
+msgstr "パーツはデフォルトでサブコンポーネントとして使用できます"
 
 #: common/models.py:181 part/models.py:844 part/templates/part/detail.html:200
 msgid "Purchaseable"
-msgstr ""
+msgstr "購入可能"
 
 #: common/models.py:182
 msgid "Parts are purchaseable by default"
-msgstr ""
+msgstr "パーツはデフォルトで購入可能です"
 
 #: common/models.py:188 part/models.py:849 part/templates/part/detail.html:210
 #: templates/js/table_filters.js:348
@@ -1657,16 +1657,16 @@ msgstr ""
 
 #: common/models.py:189
 msgid "Parts are salable by default"
-msgstr ""
+msgstr "パーツはデフォルトで販売可能です"
 
 #: common/models.py:195 part/models.py:839 part/templates/part/detail.html:190
 #: templates/js/table_filters.js:33 templates/js/table_filters.js:352
 msgid "Trackable"
-msgstr ""
+msgstr "追跡可能"
 
 #: common/models.py:196
 msgid "Parts are trackable by default"
-msgstr ""
+msgstr "パーツはデフォルトで追跡可能です"
 
 #: common/models.py:202 part/models.py:859 part/templates/part/detail.html:150
 #: templates/js/table_filters.js:29
@@ -2099,7 +2099,7 @@ msgstr ""
 #: company/templates/company/manufacturer_part_base.html:19
 #: stock/templates/stock/item_base.html:374
 msgid "Manufacturer Part"
-msgstr ""
+msgstr "メーカー・パーツ"
 
 #: company/models.py:415
 msgid "Parameter name"
@@ -2279,16 +2279,16 @@ msgstr ""
 #: company/templates/company/detail_manufacturer_part.html:11
 #: templates/InvenTree/search.html:149
 msgid "Manufacturer Parts"
-msgstr ""
+msgstr "メーカー・パーツ"
 
 #: company/templates/company/detail_manufacturer_part.html:22
 msgid "Create new manufacturer part"
-msgstr ""
+msgstr "新しいメーカー・パーツを作成"
 
 #: company/templates/company/detail_manufacturer_part.html:23
 #: part/templates/part/supplier.html:47
 msgid "New Manufacturer Part"
-msgstr ""
+msgstr "新しいメーカ―・パーツ"
 
 #: company/templates/company/detail_manufacturer_part.html:28
 #: company/templates/company/detail_supplier_part.html:27
@@ -2303,29 +2303,29 @@ msgstr ""
 #: company/templates/company/detail_supplier_part.html:32
 #: part/templates/part/category.html:136
 msgid "Order parts"
-msgstr ""
+msgstr "パーツの注文"
 
 #: company/templates/company/detail_manufacturer_part.html:36
 #: company/templates/company/detail_supplier_part.html:35
 msgid "Delete parts"
-msgstr ""
+msgstr "パーツを削除"
 
 #: company/templates/company/detail_manufacturer_part.html:36
 #: company/templates/company/detail_supplier_part.html:35
 msgid "Delete Parts"
-msgstr ""
+msgstr "パーツを削除"
 
 #: company/templates/company/detail_manufacturer_part.html:68
 #: company/templates/company/detail_supplier_part.html:66
 #: part/templates/part/bom.html:159 part/templates/part/category.html:127
 #: templates/js/stock.js:1335
 msgid "New Part"
-msgstr ""
+msgstr "新規パーツ"
 
 #: company/templates/company/detail_manufacturer_part.html:69
 #: company/templates/company/detail_supplier_part.html:67
 msgid "Create new Part"
-msgstr ""
+msgstr "新規パーツを作成"
 
 #: company/templates/company/detail_manufacturer_part.html:74
 #: company/views.py:66 part/templates/part/supplier.html:85
@@ -2352,20 +2352,20 @@ msgstr ""
 #: company/templates/company/manufacturer_part_navbar.html:11
 #: templates/InvenTree/search.html:164
 msgid "Supplier Parts"
-msgstr ""
+msgstr "サプライヤー・パーツ"
 
 #: company/templates/company/detail_supplier_part.html:21
 #: order/templates/order/order_wizard/select_parts.html:44
 #: part/templates/part/part_base.html:433
 msgid "Create new supplier part"
-msgstr ""
+msgstr "新しいサプライヤー・パーツを作成"
 
 #: company/templates/company/detail_supplier_part.html:22
 #: company/templates/company/manufacturer_part_suppliers.html:17
 #: part/templates/part/part_base.html:432 part/templates/part/supplier.html:18
 #: templates/js/stock.js:1341
 msgid "New Supplier Part"
-msgstr ""
+msgstr "新しいサプライヤー・パーツ"
 
 #: company/templates/company/detail_supplier_part.html:72
 #: company/templates/company/manufacturer_part_suppliers.html:96
@@ -2386,35 +2386,35 @@ msgstr ""
 #: company/templates/company/supplier_part_orders.html:17
 #: part/templates/part/orders.html:17 part/templates/part/part_base.html:58
 msgid "Order part"
-msgstr ""
+msgstr "パーツの注文"
 
 #: company/templates/company/manufacturer_part_base.html:41
 msgid "Edit manufacturer part"
-msgstr ""
+msgstr "メーカー・パーツの編集"
 
 #: company/templates/company/manufacturer_part_base.html:45
 msgid "Delete manufacturer part"
-msgstr ""
+msgstr "メーカー・パーツを削除"
 
 #: company/templates/company/manufacturer_part_base.html:57
 #: company/templates/company/manufacturer_part_detail.html:10
 msgid "Manufacturer Part Details"
-msgstr ""
+msgstr "メーカー・パーツの詳細"
 
 #: company/templates/company/manufacturer_part_base.html:62
 #: company/templates/company/manufacturer_part_detail.html:18
 #: company/templates/company/supplier_part_base.html:61
 #: company/templates/company/supplier_part_detail.html:18
 msgid "Internal Part"
-msgstr ""
+msgstr "内部パーツ"
 
 #: company/templates/company/manufacturer_part_base.html:125
 msgid "Edit Manufacturer Part"
-msgstr ""
+msgstr "メーカー・パーツの編集"
 
 #: company/templates/company/manufacturer_part_base.html:134
 msgid "Delete Manufacturer Part"
-msgstr ""
+msgstr "メーカー・パーツを削除"
 
 #: company/templates/company/manufacturer_part_navbar.html:14
 #: company/templates/company/manufacturer_part_suppliers.html:10
@@ -2426,7 +2426,7 @@ msgstr ""
 
 #: company/templates/company/manufacturer_part_navbar.html:19
 msgid "Manufacturer Part Stock"
-msgstr ""
+msgstr "メーカー・パーツの在庫"
 
 #: company/templates/company/manufacturer_part_navbar.html:22
 #: company/templates/company/navbar.html:41
@@ -2444,7 +2444,7 @@ msgstr ""
 
 #: company/templates/company/manufacturer_part_navbar.html:26
 msgid "Manufacturer Part Orders"
-msgstr ""
+msgstr "メーカー・パーツの注文"
 
 #: company/templates/company/manufacturer_part_navbar.html:29
 #: company/templates/company/supplier_part_navbar.html:22
@@ -3204,7 +3204,7 @@ msgstr ""
 
 #: order/templates/order/order_wizard/select_parts.html:20
 msgid "No purchaseable parts selected"
-msgstr ""
+msgstr "購入可能なパーツが選択されていません"
 
 #: order/templates/order/order_wizard/select_parts.html:33
 msgid "Select Supplier"
@@ -3327,7 +3327,7 @@ msgstr ""
 #: order/templates/order/receive_parts.html:8
 #, python-format
 msgid "Receive outstanding parts for <b>%(order)s</b> - <i>%(desc)s</i>"
-msgstr ""
+msgstr "<b>%(order)s</b> - <i>%(desc)s</i> の未処理のパーツを受け取る"
 
 #: order/templates/order/receive_parts.html:14 part/api.py:47
 #: part/models.py:326 part/templates/part/cat_link.html:7
@@ -3340,7 +3340,7 @@ msgstr ""
 #: templates/navbar.html:23 templates/stats.html:80 templates/stats.html:89
 #: users/models.py:41
 msgid "Parts"
-msgstr ""
+msgstr "パーツ"
 
 #: order/templates/order/receive_parts.html:15
 msgid "Select parts to receive against this order"
@@ -4287,7 +4287,7 @@ msgstr ""
 
 #: part/templates/part/bom_upload/select_parts.html:16
 msgid "Step 3 - Select Parts"
-msgstr ""
+msgstr "ステップ3 - パーツの選択"
 
 #: part/templates/part/bom_upload/select_parts.html:27
 msgid "Submit BOM"
@@ -4342,7 +4342,7 @@ msgstr ""
 
 #: part/templates/part/category.html:33
 msgid "All parts"
-msgstr ""
+msgstr "全てのパーツ"
 
 #: part/templates/part/category.html:38 part/views.py:2369
 msgid "Create new part category"
@@ -6265,8 +6265,7 @@ msgstr ""
 
 #: templates/InvenTree/settings/appearance.html:29
 #, python-format
-msgid ""
-"\n"
+msgid "\n"
 "        The CSS sheet \"%(invalid_color_theme)s.css\" for the currently selected color theme was not found.<br>\n"
 "        Please select another color theme :)\n"
 "    "
@@ -7914,3 +7913,4 @@ msgstr ""
 #: users/models.py:193
 msgid "Permission to delete items"
 msgstr ""
+
